--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-  <title>Vignesh Portfolio</title>
+  <title>Mayuri Priya Portfolio</title>
   <style>
     * {
       margin: 0;
@@ -15,7 +15,7 @@
     }
     body {
       font-family: 'Segoe UI', sans-serif;
-      background: #f5f7fa;
+      background: #396d46;
       color: #2b2525;
     }
     header {
@@ -56,9 +56,9 @@
     }
     .tabs button:hover,
     .tabs button.active {
-      background: #135ee0;
+      background: #3f1c30;
       color: #fff;
-      border-color: #1752b9;
+      border-color: #5a1d52;
     }
     section {
       max-width: 900px;
@@ -95,7 +95,7 @@
       margin-top: 1rem;
     }
     .download-button:hover {
-      background: #1e3c72;
+      background: #721e33;
     }
     footer {
       text-align: center;
@@ -173,8 +173,8 @@
     }
     .dark-mode .tabs button {
       background-color: #2a2a2a;
-      color: #f5f5f5;
-      border-color: #555;
+      color: #66502e;
+      border-color: #555555;
     }
     .dark-mode .tabs button.active,
     .dark-mode .tabs button:hover {
@@ -185,25 +185,25 @@
       position: absolute;
       top: 1rem;
       right: 1rem;
-      background: #fff;
+      background: #1a2d83;
       border: none;
       padding: 0.5rem 1rem;
       font-weight: bold;
       cursor: pointer;
       border-radius: 5px;
-      color: #2a5298;
+      color: #982a98;
     }
   </style>
 </head>
 <body>
 <header style="display: flex; flex-direction: row; align-items: center; justify-content: space-between; padding: 2rem">
   <button class="dark-toggle" onclick="toggleDarkMode()">Toggle Dark Mode</button>
-  <img src="./Vignesh Mathiyalagan.jpg" alt="Profile Picture" class="profile-picture" id="profileImage" style="margin: 0 1rem 0 0; align-self: flex-start;">
+  <img src="./download1.jpg" alt="Profile Picture" class="profile-picture" id="profileImage" style="margin: 0 1rem 0 0; align-self: flex-start;">
   <div style="text-align: left;">
-    <h1>Vignesh Mathiyalagan</h1>
+    <h1>MAYURI PRIYA</h1>
     
   </div>
-  <p>Electronics Engineer | Cybersecurity Enthusiast</p>
+  <p>Assistant Professor | Department of Computer Science</p>
   <input type="file" id="fileInput" accept="image/*" style="display:none">
   <button onclick="showModal()">Change Profile</button>
 </header>
@@ -221,12 +221,12 @@
 
 <section id="about" class="active">
   <h2>About Me</h2>
-  <p>I'm a <b>cybersecurity expert</b> and technology enthusiast with over 7 years of experience. I help organizations build secure systems and educate others about online safety. I’m passionate about ethical hacking, digital forensics, and emerging technologies.</p>
+  <p>I'm an <b>Assistant Professor in Computer science</b> with over 4 years of experience.  I’m passionate about ethical hacking, digital forensics, and emerging technologies.</p>
 </section>
 
 <section id="education">
   <h2>Education</h2>
-  <p>Anna University – B.E. in Electrical & Electronics Engineering</p>
+  <p>Bharathiar University – M.Sc in Computer Science</p>
 </section>
 
 <section id="skills">
@@ -278,7 +278,7 @@
   <div style="display: flex; flex-wrap: wrap; gap: 20px; justify-content: center;">
     <div style="text-align: center;">
       <a href="https://skills.yourlearning.ibm.com/certificate/share/8a8c01e2efewogICJvYmplY3RJZCIgOiAiVVJMLVBMTFYyTzZVRlRVIiwKICAibGVhcm5lckNOVU0iIDogIjE4OTkzMTdSRUciLAogICJvYmplY3RUeXBlIiA6ICJBQ1RJVklUWSIKfQc61cb1757c-10" target="_blank">
-        <img src="./ibmcert.png" alt="MS-356" style="max-width: 200px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
+        <img src="./Final Certificate-1.png" alt="MS-356" style="max-width: 200px; border-radius: 8px; box-shadow: 0 2px 10px rgba(0,0,0,0.1);">
       </a>
       <p>Cybersecurity Essentials – Cisco</p>
     </div>
@@ -307,7 +307,7 @@
 </section>
 
 <footer>
-  <p>&copy; 2025 Vignesh Mathiyalagan. All rights reserved.</p>
+  <p>&copy; 2025 Mayuri Priya. All rights reserved.</p>
 </footer>
 
 <div class="modal" id="passwordModal">
